--- a/server/package.json
+++ b/server/package.json
@@ -10,20 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint": "^5.16.0",
     "graphql-yoga": "^1.18.3",
-    "eslint": "^5.16.0"
+    "mongoose": "^5.7.1"
   },
   "eslintConfig": {
     "root": true,
     "env": {
       "node": true
-    },
-    "extends": [
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
     }
+  },
+  "devDependencies": {
+    "kue": "^0.11.6"
   }
 }
